syntax = "proto3";

option go_package = "task/v1";

// Define a package for your service
package proto;

// Import the gRPC package
import "google/protobuf/empty.proto";

// Task entity definition
message Task {
  int64 id = 1;
  string title = 2;
  string description = 3;
}

// Service definition
service TaskService {
  rpc CreateTask (CreateTaskRequest) returns (Task);
  rpc GetTask (GetTaskRequest) returns (Task);
  rpc DeleteTask (DeleteTaskRequest) returns (google.protobuf.Empty);
  rpc ListTasks (ListTasksRequest) returns (ListTasksResponse);

}

message CreateTaskRequest {
  string title = 1;
  string description = 2;
}

message GetTaskRequest {
  int64 id = 1;
}

message DeleteTaskRequest {
  int64 id = 1;
}

message ListTasksRequest {
}

message ListTasksResponse {
  repeated Task tasks = 1;
}

